--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=library-api
+
+# DB configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/librarydb
+spring.datasource.username=user
+spring.datasource.password=password
+
+# JPA configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
