--- a/pom.xml
+++ b/pom.xml
@@ -28,12 +28,13 @@
 	</scm>
 	<properties>
 		<java.version>21</java.version>
+		<graphql-java-tools.version>11.1.0</graphql-java-tools.version>
 	</properties>
 	<dependencies>
 		<dependency>
-			<groupId>com.graphql-java</groupId>
-			<artifactId>graphql-java</artifactId>
-			<version>22.3</version>
+			<groupId>com.graphql-java-kickstart</groupId>
+			<artifactId>graphql-java-tools</artifactId>
+			<version>${graphql-java-tools.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
