--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,13 @@
 spring.application.name=library-api
 
 # DB configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/librarydb
+spring.datasource.url=jdbc:postgresql://db:5432/librarydb
 spring.datasource.username=user
 spring.datasource.password=password
 
 # JPA configuration
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
+
+spring.graphql.graphiql.enabled=true
